Fix old computers on mobile

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -175,17 +175,6 @@ div.byline::after {
 	content: ' —';
 }
 
-div.computer-summary {
-  margin: 20px 0;
-  figure {
-    margin: 10px 0;
-  }
-  h4 {
-    font-weight: 700;
-    margin: 10px 0;
-  }
-}
-
 div.version-picker, div.version-summary {
   margin: 1.5em 0;
 }
